Ensure the header doesn't scroll out of view, so navigation is always available.

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -11,6 +11,19 @@ a:hover {
     color: black;
 }
 
+header {
+    /* prevent it scrolling out of view */
+    position: sticky;
+    top: 0;
+    /* ensure we are in front of the slideshow */
+    z-index: 1000;
+}
+
+section {
+    /* prevent anchor links from scolling behind the sticky header */
+    scroll-margin: 8rem;
+}
+
 header, footer, .page {
     width: 760px;
     margin: 0 auto;
